messages / unread badge layout issue ie8

--- a/root/webapp/app/styles/patientview/sass/ie.scss
+++ b/root/webapp/app/styles/patientview/sass/ie.scss
@@ -36,5 +36,16 @@
             min-width:100px;
         }
     }
+
+    .messages-menu-item{
+        position:relative;
+
+        i{
+            position:absolute;
+            top:2px;
+            right:6px;
+            height:15px;
+        }
+    }
 }
 
